--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "ConexaoPadrao": "Server=IE-LARISSASENA\\sqlexpress; Initial Catalog=ListaTarefa; Integrated Security=True; TrustServerCertificate=True; Encrypt=False; Persist Security Info=False"
+    "ConexaoPadrao": "Server=localhost\\sqlexpress; Initial Catalog=ListaTarefa; Integrated Security=True; TrustServerCertificate=True; Encrypt=False; Persist Security Info=False"
   }
 }
